--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.2",
     "fastify": "^5.5.0",
     "fastify-cors": "^6.0.3",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
